--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://github.com/mayuresh82/mayuresh82.github.io"
+baseurl = "https://mayuresh82.github.io"
 title = "NRE-Bytes"
 theme = "cleanwhite"
 languageCode = "en-us"
